--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -1,16 +1,18 @@
 <nav class="sidebar">
   <div class="mt-5">
   <ul>
-    <li class="item" routerLink="/dashboard"><a>Home</a></li>
+    <li class="item" routerLink="/dashboard"><a>Inicio</a></li>
+
     <li class="item" routerLink="/users"><a>Usuarios</a></li>
     <li class="item" routerLink="/roles"><a>Roles</a></li>
+
     <li class="item" routerLink="/providers"><a>Proveedores</a></li>
     <li class="item" routerLink="/clients"><a>Clientes</a></li>
-    <li class="item" routerLink="/loss"><a>Perdida</a></li>
 
+    <li class="item" routerLink="/loss"><a>Pérdidas</a></li>
 
-    <li class="item" routerLink="/categories"><a>Categorias producto</a></li>
-    <li class="item" routerLink="/products"><a>Producto</a></li>
+    <li class="item" routerLink="/categories"><a>Categorías productos</a></li>
+    <li class="item" routerLink="/products"><a>Productos</a></li>
   
   </ul>
 </div>
