Cambiar estado con botón dinámico.

--- a/FRONT-END/src/app/modules/categories/categories.component.html
+++ b/FRONT-END/src/app/modules/categories/categories.component.html
@@ -6,7 +6,11 @@
     [columns]="columns" 
     [canDelete]="true" 
     [canExport]="false"
-    [canSeeDetail]="false"  
+    [canSeeDetail]="false" 
+    [canChangeStatus]="true"
+    [showStateColumn]="true"
+    [statusField]="'estadoCategoria'" 
+    (statusChange)="changeCategorieStatus($event)"
     (create)="openCreateModal()"
     (export)="exportCategorie()" 
     (edit)="openEditModal($event)"
