--- a/FRONT-END/src/app/modules/clients/clients.component.html
+++ b/FRONT-END/src/app/modules/clients/clients.component.html
@@ -4,13 +4,18 @@
   [columns]="columns" 
   [canDelete]="false"
   [canExport]="true" 
-  [canSeeDetail]="true" 
+  [canSeeDetail]="true"
+  
+  [canChangeStatus]="true"
+  [showStateColumn]="true"
+  [statusField]="'estadoCliente'"
+
   (create)="openCreateModal()"
   (export)="exportClients()" 
   (edit)="openEditModal($event)"
-  (search)="searchClients($event)">
+  (search)="searchClients($event)"
+  (statusChange)="changeClientStatus($event)">
 </app-crud>
-
 <!-- FORMULARIOS -->
 
 <p-dialog [(visible)]="showModal" [style]="{width: '450px'}" [header]="isEditing ? 'Editar Cliente' : 'Crear Cliente'"
