--- a/FRONT-END/src/app/modules/products/products.component.html
+++ b/FRONT-END/src/app/modules/products/products.component.html
@@ -5,11 +5,15 @@
 [columns]="columns" 
 [canDelete]="true" 
 [canSeeDetail]="true" 
+[canChangeStatus]="true"
+[showStateColumn]="true"
+[statusField]="'estadoProducto'"
 (create)="openCreateModal()"
 (export)="exportProduct()" 
 (edit)="openEditModal($event)"
 (delete)="confirmDelete($event)" 
-(search)="searchProduct($event)">
+(search)="searchProduct($event)"
+(statusChange)="changeProductStatus($event)">
 </app-crud>
 
 <!-- FORMULARIOS -->
